--- a/cat.html
+++ b/cat.html
@@ -1,3 +1,6 @@
 <h1>Hello from catalog</h1>
 <h1>Hello from catalog</h1>
 <p>New paragraph</p>
+<h1>Hello from catalog</h1>
+<p>First paragraph</p>
+<p>Second paragraph</p>
