--- a/cat.html
+++ b/cat.html
@@ -4,3 +4,6 @@
 <h1>Hello from catalog</h1>
 <p>First paragraph</p>
 <p>Second paragraph</p>
+<h1>Hello from catalog</h1>
+<p>First paragraph</p>
+<p>Second paragraph</p>
