--- a/cat.html
+++ b/cat.html
@@ -7,3 +7,7 @@
 <h1>Hello from catalog</h1>
 <p>First paragraph</p>
 <p>Second paragraph</p>
+<h1>Hello from catalog</h1>
+<p>First paragraph</p>
+<p>Second paragraph</p>
+<p>Third paragraph</p>
